{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 42,
  "lineage": "f16fcf33-efcd-b3d3-4946-f882c7ff012d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/networkSecurityGroups/nsg-hub",
            "location": "eastus",
            "name": "nsg-hub",
            "resource_group_name": "rg-cloudshoes",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-spoke01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke01",
            "location": "eastus2",
            "name": "nsg-spoke01",
            "resource_group_name": "rg-cloudshoes",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.10.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_HTTP_80",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AppGatewaySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.250.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01/subnets/AppGatewaySubnet",
            "name": "AppGatewaySubnet",
            "resource_group_name": "rg-cloudshoes",
            "virtual_network_name": "vnet-spoke01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.spoke01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "GatewaySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.250.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "rg-cloudshoes",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01/subnets/sub-backend",
            "name": "sub-backend",
            "resource_group_name": "rg-cloudshoes",
            "virtual_network_name": "vnet-spoke01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.spoke01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke02/subnets/sub-database",
            "name": "sub-database",
            "resource_group_name": "rg-cloudshoes",
            "virtual_network_name": "vnet-spoke02"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.spoke02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01/subnets/sub-frontend",
            "name": "sub-frontend",
            "resource_group_name": "rg-cloudshoes",
            "virtual_network_name": "vnet-spoke01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.spoke01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/sub-hub",
            "name": "sub-hub",
            "resource_group_name": "rg-cloudshoes",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-integration",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke02/subnets/sub-integration",
            "name": "sub-integration",
            "resource_group_name": "rg-cloudshoes",
            "virtual_network_name": "vnet-spoke02"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.spoke02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_hub_assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/sub-hub",
            "network_security_group_id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/networkSecurityGroups/nsg-hub",
            "subnet_id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/sub-hub"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-hub",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub-hub",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_spoke01_assc_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01/subnets/sub-backend",
            "network_security_group_id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke01",
            "subnet_id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01/subnets/sub-backend"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-spoke01",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub-backend",
            "azurerm_virtual_network.spoke01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_spoke01_assc_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01/subnets/sub-frontend",
            "network_security_group_id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke01",
            "subnet_id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01/subnets/sub-frontend"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-spoke01",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub-frontend",
            "azurerm_virtual_network.spoke01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_spoke02_assc_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_spoke02_assc_integra",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4728d285-8076-40d7-8334-051ec79d47ca",
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "eastus",
            "name": "vnet-hub",
            "resource_group_name": "rg-cloudshoes"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "afc60073-0656-43f7-9cb9-5e7686e70dca",
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke01",
            "location": "eastus2",
            "name": "vnet-spoke01",
            "resource_group_name": "rg-cloudshoes"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fbf444ec-dab4-4344-bf7a-47c21e02a612",
            "id": "/subscriptions/0a1686ad-995a-4ceb-93e6-cc3d2f0ff3dd/resourceGroups/rg-cloudshoes/providers/Microsoft.Network/virtualNetworks/vnet-spoke02",
            "location": "centralus",
            "name": "vnet-spoke02",
            "resource_group_name": "rg-cloudshoes"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}